[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pystructures"
version = "0.1.0"
description = "A learning-focused Python library implementing core data structures"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools.package-data]
pystructures = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pystructures*"]
